Make corrections(validated) and create designs file folder

--- a/contact-us.html
+++ b/contact-us.html
@@ -172,17 +172,17 @@
                                     <p>Monday to Friday 9am - 4pm GMT</p>
                                 </div>
                                 <div class="col-6">
-                                    <p class="fw-bold">Email:</p>
-                                    <p>contact@codeconcept.com</p>
+                                    <p class="fw-bold">Phone:</p>
+                                    <p>+1 (613) 123-4567</p>
                                 </div>
                             </div>
 
                             <div class="row">
-                                <div class="col-lg-6">
-                                    <p class="fw-bold">Phone:</p>
-                                    <p>+1 (613) 123-4567</p>
+                                <div class="col-6">
+                                    <p class="fw-bold">Email:</p>
+                                    <p>contact@codeconcept.com</p>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-6">
                                     <p class="fw-bold">Address:</p>
                                     <p>Code Concept Studio <br>
                                         123 Creative Lane<br>
@@ -322,7 +322,7 @@
                                     <a class="nav-link" href="#">Terms of Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Privacy Policiy</a>
+                                    <a class="nav-link" href="#">Privacy Policy</a>
                                 </li>
                             </ul>
                         </div>
