--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="offcanvas-body">
-                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <ul class="navbar-nav justify-content-end flex-grow-1">
                                 <li class="nav-item">
                                     <a class="nav-link active text-uppercase" aria-current="page" href="#">Showroom</a>
                                 </li>
@@ -96,8 +96,8 @@
                 <div class="container hero">
                     <div class="d-flex justify-content-center align-items-center">
                         <div class="text-center">
-                            <h1 class="mb-4 fw-bold">Crafting your ideas into <br>
-                                <span class="text-white display-4 fw-bold">
+                            <h1 class="mb-4 px-2 fw-bold">Crafting your ideas into <br>
+                                <span class="text-white display-3 fw-bold">
                                     masterpiece solutions
                                 </span>
                             </h1>
@@ -147,7 +147,7 @@
             </section>
 
             <!-- ARTWORKS COLLECTION -->
-            <section class="mt-5 py-5 text-center headline">
+            <section class="mt-5 py-5 text-center headline px-1">
                 <div class="container">
 
                     <img src="images/line.png" class="img-fluid mb-5" alt="ilustration of a curvy line">
@@ -230,7 +230,7 @@
                     <h3 class="text-uppercase mb-5">Explore the potential of our services and let's work together </h3>
 
                     <div class="row">
-                        <div class="col-12 col-sm-6 col-lg-3 p-2">
+                        <div class="col-12 col-sm-6 col-lg-3 p-3">
                             <div class="card text-bg-dark service-rounded service">
                                 <picture>
                                     <source media="(max-width: 768px)"
@@ -252,7 +252,7 @@
 
                         </div>
 
-                        <div class="col-12 col-sm-6 col-lg-3 p-2">
+                        <div class="col-12 col-sm-6 col-lg-3 p-3">
 
                             <div class="card text-bg-dark service-rounded service">
                                 <picture>
@@ -273,7 +273,7 @@
 
                         </div>
 
-                        <div class="col-12 col-sm-6 col-lg-3 p-2">
+                        <div class="col-12 col-sm-6 col-lg-3 p-3">
 
                             <div class="card text-bg-dark service-rounded service">
                                 <picture>
@@ -294,7 +294,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-sm-6 col-lg-3 p-2">
+                        <div class="col-12 col-sm-6 col-lg-3 p-3">
 
                             <div class="card text-bg-dark service-rounded service">
                                 <picture>
@@ -444,7 +444,7 @@
                                     <a class="nav-link" href="#">Terms of Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Privacy Policiy</a>
+                                    <a class="nav-link" href="#">Privacy Policy</a>
                                 </li>
                             </ul>
                         </div>
