--- a/our-studio.html
+++ b/our-studio.html
@@ -357,7 +357,7 @@
                   <a class="nav-link" href="#">Terms of Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Privacy Policiy</a>
+                  <a class="nav-link" href="#">Privacy Policy</a>
                 </li>
               </ul>
             </div>
