Update h1 in contact-us

--- a/contact-us.html
+++ b/contact-us.html
@@ -96,7 +96,7 @@
         <main id="main" role="main">
             <section class="intro-contact text-center headline">
                 <div class="container">
-                    <h1 class="pt-5 mb-4 text-uppercase display-4 fw-bold">Inspire? - Contact Us!</h1>
+                    <h1 class="pt-5 mb-4 text-uppercase display-4 fw-bold">Inspired? - Contact Us!</h1>
                     <div class="row">
                         <div class="col-lg-12">
                             <p>At Code Concept, we are dedicated to bringing your creative vision to life. Whether you
